# gotcha

./: .gitignore  Cargo.toml
src/: main.rs  search.rs
src/adder/: Cargo.toml
