[package]
name = "gotcha"
version = "0.1.0"
authors = ["Ben Joostens <ben@colourmill.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.46"
alt_serde_derive = "1.0.104"
strsim = "0.10.0"
dialoguer = "~0.5.0"
